# get-legal-done

./: .gitignore  CONTRIBUTING.md  README.md  package.json  pyproject.toml
infra/: gld-conventions.json  gld-protocols.json  gld-state.json
src/gld/: __init__.py  contracts.py
src/gld/agents/: gld-analyst.md  gld-bibliographer.md  gld-consistency-checker.md  gld-debugger.md  gld-executor.md  gld-paper-writer.md  gld-planner.md  gld-referee.md  gld-researcher.md  gld-verifier.md
src/gld/commands/: branch-hypothesis.md  execute-phase.md  health.md  new-project.md  plan-phase.md  resume-work.md  review-paper.md  verify-work.md
src/gld/core/: config.py  constants.py  conventions.py  git_ops.py  kernel.py  observability.py  phases.py  state.py
src/gld/hooks/: statusline.py
src/gld/mcp/: __init__.py  conventions_server.py  errors_server.py  patterns_server.py  protocols_server.py  state_server.py  verification_server.py
src/gld/specs/references/orchestration/: agent-delegation.md
src/gld/specs/references/protocols/: case-law-research-protocols.md  constitutional-analysis-protocols.md  contract-analysis-protocols.md  criminal-law-protocols.md  ip-protocols.md  regulatory-admin-protocols.md  statutory-interpretation-protocols.md  tort-analysis-protocols.md
src/gld/specs/references/verification/: llm-legal-errors.md
