[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "get-legal-done"
version = "0.1.0"
description = "AI copilot for legal research and brief writing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Jesse Weigel", email = "jesse@jesseweigel.com" },
]
keywords = ["legal", "ai", "research", "brief-writing", "citation-verification"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: General",
]
dependencies = [
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/JesseRWeigel/get-legal-done"
Repository = "https://github.com/JesseRWeigel/get-legal-done"
Issues = "https://github.com/JesseRWeigel/get-legal-done/issues"

[project.scripts]
gld = "gld.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gld"]
